--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,13 @@
             <artifactId>swingx-all</artifactId>
             <version>1.6.5-1</version>
         </dependency>
+        <dependency>
+        <groupId>com.mysql</groupId> <!-- ✅ Correct -->
+        <artifactId>mysql-connector-j</artifactId>
+        <version>8.0.33</version>
+    </dependency>
+
+
     </dependencies>
 
     <build>
